--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -14,7 +14,7 @@
                         </a>
                     </li>
                     <li class="main-nav-list-li">
-                        <a class="main-nav-link" href="service.html">Услуги.
+                        <a class="main-nav-link" href="{% url 'mainapp:service' %}">Услуги.
                             <svg viewBox="0 0 104 52" fill="none" class="svg svg-main-menu">
                                 <path
                                         class="path"
