--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -25,7 +25,7 @@
                         </a>
                     </li>
                     <li class="main-nav-list-li">
-                        <a class="main-nav-link" href="#">Проекты.
+                        <a class="main-nav-link" href="{% url 'mainapp:team' %}">Проекты.
                             <svg viewBox="0 0 104 52" fill="none" class="svg svg-main-menu-big">
                                 <path
                                         class="path"
