--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -320,6 +320,7 @@
                 </div>
                 <p class="h2-section">&nbsp;</p>
             </section>
+        </section>
     </main>
     <div class="h2-section hide-on-mobil">&nbsp;</div>
     <footer class="container footer">
