--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -28,6 +28,7 @@
         <script src="{% static 'js/sidebar.js' %}" defer></script>
         <script src="{% static 'js/swiperForTablet.js' %}" defer></script>
         <script src="{% static 'js/menu.js' %}" defer></script>
+        <script src="{% static 'js/formValidator.js' %}" defer></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
     {% endblock %}
 
