--- a/mainapp/templates/mainapp/service.html
+++ b/mainapp/templates/mainapp/service.html
@@ -326,7 +326,7 @@
                 Заполните, пожалуйста, форму и мы свяжемся с вами в ближайшее время!
             </p>
             <form action="#" class="flex footer-form">
-                <!-- <label for="name">Имя</label> -->
+                
                 <input
                         type="text"
                         name="name"
@@ -334,7 +334,7 @@
                         placeholder="Имя"
                         class="input-form"
                 />
-                <!-- <label for="phone">Телефон</label> -->
+                <div class="form--input--block">
                 <input
                         type="tel"
                         name="phone"
@@ -342,7 +342,8 @@
                         placeholder="Телефон"
                         class="input-form"
                 />
-                <!-- <label for="email">E-mail</label> -->
+            </div>
+                <div class="form--input--block">
                 <input
                         type="email"
                         name="email"
@@ -350,7 +351,7 @@
                         placeholder="E-mail"
                         class="input-form"
                 />
-                <!-- <label for="website_type">Тип сайта</label> -->
+            </div>
                 <input
                         type="text"
                         name="website_type"
@@ -368,7 +369,7 @@
                     >
                 </label>
 
-                <button type="submit" class="button-form">Отправить</button>
+                <button type="submit" class="button-form" id="submitButton">Отправить</button>
             </form>
         </div>
         <div class="grid footer-info grid-mobil-footer">
