--- a/mainapp/templates/mainapp/team.html
+++ b/mainapp/templates/mainapp/team.html
@@ -57,7 +57,7 @@
             </div>
 
         </div>
-        </div>
+        <!-- </div> -->
     </section>
     <footer class="container footer">
         <div class="flex footer-section">
@@ -66,7 +66,7 @@
                 Заполните, пожалуйста, форму и мы свяжемся с вами в ближайшее время!
             </p>
             <form action="#" class="flex footer-form">
-                <!-- <label for="name">Имя</label> -->
+                
                 <input
                         type="text"
                         name="name"
@@ -74,7 +74,7 @@
                         placeholder="Имя"
                         class="input-form"
                 />
-                <!-- <label for="phone">Телефон</label> -->
+                <div class="form--input--block">
                 <input
                         type="tel"
                         name="phone"
@@ -82,7 +82,8 @@
                         placeholder="Телефон"
                         class="input-form"
                 />
-                <!-- <label for="email">E-mail</label> -->
+            </div>
+                <div class="form--input--block">
                 <input
                         type="email"
                         name="email"
@@ -90,7 +91,7 @@
                         placeholder="E-mail"
                         class="input-form"
                 />
-                <!-- <label for="website_type">Тип сайта</label> -->
+            </div>
                 <input
                         type="text"
                         name="website_type"
@@ -108,7 +109,7 @@
                     >
                 </label>
 
-                <button type="submit" class="button-form">Отправить</button>
+                <button type="submit" class="button-form" id="submitButton">Отправить</button>
             </form>
         </div>
         <div class="grid footer-info grid-mobil-footer">
