--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -1,4 +1,7 @@
-{% extends 'mainapp/base.html' %} {% load static %} {% block conteiner %}
+{% extends 'mainapp/base.html' %}
+{% load static %}
+{% block conteiner %}
+
     <body>
     <section class="section-hero bgr-img-cover">
 
