доработать ссылки в футоре и хедаре

--- a/mainapp/templates/mainapp/includes/inc__footer.html
+++ b/mainapp/templates/mainapp/includes/inc__footer.html
@@ -64,6 +64,7 @@
         </div>
         <nav>
             <ul class="flex footer-info-menu">
+{#                сюда нужны ссылки#}
                 <li>О нас.</li>
                 <li>Тарифы.</li>
                 <li>Политика конфиденциальности.</li>
