--- a/mainapp/templates/mainapp/includes/inc__header.html
+++ b/mainapp/templates/mainapp/includes/inc__header.html
@@ -9,7 +9,7 @@
                     </a>
                 </li>
                 <li class="main-nav-list-li">
-                    <a class="main-nav-link" href="{% url 'mainapp:service' %}">
+                    <a class="main-nav-link" href=""> {# сссылка на услуги #}
                         Услуги.
                         <svg viewBox="0 0 104 52" fill="none" class="svg svg-main-menu">
                             <path
@@ -20,7 +20,7 @@
                     </a>
                 </li>
                 <li class="main-nav-list-li">
-                    <a class="main-nav-link" href="{% url 'mainapp:team' %}">
+                    <a class="main-nav-link" href="">{#  ccылка на проекты #}
                         Проекты.
                         <svg viewBox="0 0 104 52" fill="none" class="svg svg-main-menu-big">
                             <path
