--- a/static/css/general.css
+++ b/static/css/general.css
@@ -22,44 +22,43 @@ Menu-font:  #F2F2F2;
 */
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-  }
-  
-  html {
-    /* font-size: 10px; */
-  
-    /* 10px / 16px = 0.625 = 62.5% */
-    /* Percentage of user's browser font-size setting */
-    font-size: 62.5%;
-    overflow-x: hidden;
-  }
-  
-  body {
-    font-family: Mulish;
-    line-height: 1;
-    font-weight: 400;
-    color: #ffffff;
-  
-    /* Only works if there is nothing absolutely positioned in relation to body */
-    overflow-x: hidden;
-  }
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+}
 
-  ul {
-    list-style-type: none;
-  }
-  
+html {
+  /* font-size: 10px; */
+
+  /* 10px / 16px = 0.625 = 62.5% */
+  /* Percentage of user's browser font-size setting */
+  font-size: 62.5%;
+  overflow-x: hidden;
+}
+
+body {
+  font-family: Mulish;
+  line-height: 1;
+  font-weight: 400;
+  color: #ffffff;
+
+  /* Only works if there is nothing absolutely positioned in relation to body */
+  overflow-x: hidden;
+}
+
+ul {
+  list-style-type: none;
+}
 
 input {
   border: none;
 }
 
-  input:focus {
-    outline:none;
+input:focus {
+  outline: none;
 }
-  /**************************/
+/**************************/
 /* GENRAL REUSABLE COMPONENTS */
 /**************************/
 
@@ -97,10 +96,11 @@ input {
 }
 
 .accent-font {
-color: #00FFFF;
-font-weight: 700;
+  color: #00ffff;
+  font-weight: 700;
 }
 
 .purple-font {
-  color: #AE00BE;
+  color: #ae00be;
 }
+
