--- a/static/css/style.css
+++ b/static/css/style.css
@@ -512,6 +512,7 @@
   align-items: center;
   gap: 2.5rem;
   border-bottom: 1px solid #ffffff;
+  position: relative;
 }
 
 .footer-form {
@@ -521,6 +522,7 @@
   width: 60.5rem;
   padding: 5.75rem;
   margin-bottom: 3.8rem;
+  visibility: visible;
 }
 
 .form--input--block {
@@ -665,6 +667,31 @@ input[type="checkbox"]:checked::before {
 .icon-social-media {
   width: 2rem;
 }
+
+.footer-link {
+  color: #ffffff;
+}
+
+.form-messagesent {
+  position: absolute;
+  bottom: 0;
+  width: 60.5rem;
+  height: 40.5rem;
+  padding-bottom: 4.75rem;
+  margin-bottom: 3.8rem;
+  background-color: #fff;
+  color: #1e0073;
+  /* text-align: center; */
+  font-size: 2.5rem;
+  display: flex;
+  visibility: hidden;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 4rem;
+}
+
+
 
 /**************************/
 /* PRICE SECTION */
