separate animation blocks for ok or false responce from server; colored disabled inputs form when data send

--- a/mainapp/templates/mainapp/includes/inc__footer.html
+++ b/mainapp/templates/mainapp/includes/inc__footer.html
@@ -58,9 +58,13 @@
                 Отправить
             </button>
         </form>
-        <div class="form-messagesent" id="messSent">
+        <div class="form-messagesent messSent" id="messSent">
             <p class="p-message">Ваша заявка отправлена.</p>
             <p class="p-message">Спасибо! Мы скоро свяжемся с вами.</p>
+        </div>
+        <div class="form-messagesent messNotSent" id="messNotSent">
+            <p class="p-message">Что-то пошло не так</p>
+            <p class="p-message">попробуйте отправить позже</p>
         </div>
     </div>
     <div class="grid footer-info grid-mobil-footer">
